2008-04-14  Martin Lambers <marlam@marlam.de>

	* src/view_area.cpp: Use GL_CLAMP_TO_EDGE instead of GL_CLAMP for 
	textures.

2008-03-04  Martin Lambers <marlam@marlam.de>

	* mhlib/Makefile.am, src/Makefile.am: Fix potential problems with
	VPATH builds.

2008-02-26  Martin Lambers <marlam@marlam.de>

	* gnulib/*: Update gnulib. Import havelib module.

2008-01-19  Martin Lambers <marlam@marlam.de>

	* *: Update license to GPLv3 or later.
	* gnulib/*: Update gnulib.

2008-01-18  Martin Lambers <marlam@marlam.de>

	* mhlib/mh_alloc.h, mhlib/mh_alloc.c, mhlib/mh_math.h,
	mhlib/mh_math.c: Do not use "extern inline" because its semantics are
	incompatiblie between gcc-4.3 and prior versions.

2008-01-16  Martin Lambers <marlam@marlam.de>

	* README: Update for version 0.2.1.

2008-01-14  Martin Lambers <marlam@marlam.de>

	* conf/conf.cpp: Fix error message for invalid content.

2008-01-10  Martin Lambers <marlam@marlam.de>

	* NEWS: Update.
	* doc/cvlview.1, doc/cvlview.texi: Update.
	* src/range_selector.h, src/range_selector.cpp: Improve range
	spinboxes. This change replaces the erraneous patch from 2007-12-06.
	* src/range_selector.h, src/range_selector.cpp: Simplify the previous
	change.
	* src/main.cpp, src/cvlview.cpp: Update copyright year in --version
	output and AboutBox.

2008-01-09  Martin Lambers <marlam@marlam.de>

	* configure.ac: Require CVL >= 0.2.3 to benefit from a fix to the
	pseudo color function.
	* README: Update.

2007-12-08  Martin Lambers <marlam@marlam.de>

	* configure.ac, doc/cvlview.1, doc/cvlview.texi: Bump version to
	0.2.1.

2007-12-06  Martin Lambers <marlam@marlam.de>

	* mhlib/mh_os.h: Add MH_STDIN, MH_STDOUT.
	* src/range_selector.h, src/range_selector.cpp: Improve range
	spinboxes. Suggested by Maik Keller.
	* src/cvlview.cpp: Show filename in window title. Suggested by
	Maik Keller.

2007-11-08  Martin Lambers <marlam@marlam.de>

	* src/view_area.cpp: Fix export of whole image if it is stored in a
	CVL_LUM frame.