@@ -1,3 +1,10 @@
+2008-04-16  Martin Lambers <marlam@marlam.de>
+
+	* src/heightmap_selector.h, src/heightmap_selector.cpp,
+	src/view_area.h, src/view_area.cpp, src/cvlview.h, src/cvlview.cpp,
+	src/Makefile.am: Add widgets to select 3D views via height maps. The
+	functionality is not yet implemented.
+
 2008-04-14  Martin Lambers <marlam@marlam.de>
 
 	* src/view_area.cpp: Use GL_CLAMP_TO_EDGE instead of GL_CLAMP for 
